Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16190

Server crashes in Item_null_result::field_type on SELECT with time field, ROLLUP and HAVING

    XMLWordPrintable

Details

    Description

      CREATE TABLE t1 (t TIME) ENGINE=MyISAM;
      INSERT INTO t1 VALUES ('12:12:12');
      SELECT t, COUNT(*) FROM t1 GROUP BY t WITH ROLLUP HAVING t > '00:00:00';
      

      10.1 0db66ab18f

      #3  <signal handler called>
      #4  0x0000556d2df9b537 in Item_null_result::field_type (this=0x7fd41d046208) at /data/src/10.1/sql/item.h:2596
      #5  0x0000556d2e16ebab in Item::get_date (this=0x7fd41d046208, ltime=0x7fd427e85040, fuzzydate=33554437) at /data/src/10.1/sql/item.cc:1267
      #6  0x0000556d2de66dab in Item::get_date_result (this=0x7fd41d046208, ltime=0x7fd427e85040, fuzzydate=33554437) at /data/src/10.1/sql/item.h:1281
      #7  0x0000556d2e17f28d in Item_ref::get_date (this=0x7fd41d043c20, ltime=0x7fd427e85040, fuzzydate=33554437) at /data/src/10.1/sql/item.cc:7460
      #8  0x0000556d2de66d5d in Item::val_time_packed (this=0x7fd41d043c20) at /data/src/10.1/sql/item.h:1249
      #9  0x0000556d2e1a19ea in Item::val_temporal_packed (this=0x7fd41d043c20, f_type=MYSQL_TYPE_TIME) at /data/src/10.1/sql/item.h:1255
      #10 0x0000556d2e18f011 in get_datetime_value (thd=0x0, item_arg=0x7fd41d043e88, cache_arg=0x7fd41d043ed8, f_type=MYSQL_TYPE_TIME, is_null=0x7fd427e8512e) at /data/src/10.1/sql/item_cmpfunc.cc:765
      #11 0x0000556d2e18f17b in Arg_comparator::compare_temporal (this=0x7fd41d043e88, type=MYSQL_TYPE_TIME) at /data/src/10.1/sql/item_cmpfunc.cc:809
      #12 0x0000556d2e1a22d3 in Arg_comparator::compare_time (this=0x7fd41d043e88) at /data/src/10.1/sql/item_cmpfunc.h:107
      #13 0x0000556d2e1a22b4 in Arg_comparator::compare (this=0x7fd41d043e88) at /data/src/10.1/sql/item_cmpfunc.h:87
      #14 0x0000556d2e192201 in Item_func_gt::val_int (this=0x7fd41d043dc8) at /data/src/10.1/sql/item_cmpfunc.cc:1831
      #15 0x0000556d2df9353c in JOIN::rollup_send_data (this=0x7fd41d044010, idx=0) at /data/src/10.1/sql/sql_select.cc:23973
      #16 0x0000556d2df89108 in end_send_group (join=0x7fd41d044010, join_tab=0x0, end_of_records=true) at /data/src/10.1/sql/sql_select.cc:19731
      #17 0x0000556d2df855e4 in do_select (join=0x7fd41d044010, fields=0x7fd41d044410, table=0x0, procedure=0x0) at /data/src/10.1/sql/sql_select.cc:18055
      #18 0x0000556d2df6018a in JOIN::exec_inner (this=0x7fd41d044010) at /data/src/10.1/sql/sql_select.cc:3252
      #19 0x0000556d2df5d41b in JOIN::exec (this=0x7fd41d044010) at /data/src/10.1/sql/sql_select.cc:2539
      #20 0x0000556d2df609b1 in mysql_select (thd=0x7fd41ecd5070, rref_pointer_array=0x7fd41ecd9520, tables=0x7fd41d0434c0, wild_num=0, fields=..., conds=0x0, og_num=1, order=0x0, group=0x7fd41d043bc8, having=0x7fd41d043dc8, proc_param=0x0, select_options=2147748608, result=0x7fd41d043ff0, unit=0x7fd41ecd8b78, select_lex=0x7fd41ecd9278) at /data/src/10.1/sql/sql_select.cc:3476
      #21 0x0000556d2df56294 in handle_select (thd=0x7fd41ecd5070, lex=0x7fd41ecd8ab0, result=0x7fd41d043ff0, setup_tables_done_option=0) at /data/src/10.1/sql/sql_select.cc:388
      #22 0x0000556d2df260d6 in execute_sqlcom_select (thd=0x7fd41ecd5070, all_tables=0x7fd41d0434c0) at /data/src/10.1/sql/sql_parse.cc:5946
      #23 0x0000556d2df1c569 in mysql_execute_command (thd=0x7fd41ecd5070) at /data/src/10.1/sql/sql_parse.cc:2992
      #24 0x0000556d2df299da in mysql_parse (thd=0x7fd41ecd5070, rawbuf=0x7fd41d043088 "SELECT t, COUNT(*) FROM t1 GROUP BY t WITH ROLLUP HAVING t > '00:00:00'", length=71, parser_state=0x7fd427e865e0) at /data/src/10.1/sql/sql_parse.cc:7390
      #25 0x0000556d2df1862a in dispatch_command (command=COM_QUERY, thd=0x7fd41ecd5070, packet=0x7fd4217f9071 "", packet_length=71) at /data/src/10.1/sql/sql_parse.cc:1491
      #26 0x0000556d2df173af in do_command (thd=0x7fd41ecd5070) at /data/src/10.1/sql/sql_parse.cc:1120
      #27 0x0000556d2e050581 in do_handle_one_connection (thd_arg=0x7fd41ecd5070) at /data/src/10.1/sql/sql_connect.cc:1330
      #28 0x0000556d2e0502e5 in handle_one_connection (arg=0x7fd41ecd5070) at /data/src/10.1/sql/sql_connect.cc:1242
      #29 0x0000556d2e40c744 in pfs_spawn_thread (arg=0x7fd425439ef0) at /data/src/10.1/storage/perfschema/pfs.cc:1861
      #30 0x00007fd427b06494 in start_thread (arg=0x7fd427e87b00) at pthread_create.c:333
      #31 0x00007fd425ebf93f in clone () from /lib/x86_64-linux-gnu/libc.so.6
      

      Reproducible on 10.1, 10.2.
      Not reproducible on 5.5, 10.0, 10.3.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25d
                  1.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.